--- a/css/contact.css
+++ b/css/contact.css
@@ -5,7 +5,7 @@
 
 /* ========================global style================ */
 .container {
-    max-width: 1250px;
+    max-width: 1200px;
     width: 100%;
     box-sizing: border-box;
     padding: 0 20px;
@@ -96,13 +96,13 @@ a {
 }
 
 .menubar-section .menubar-parents .menubar-logo {
-    width: 50%;
+    width: 30%;
     text-align: left;
-    transform: translateX(25px);
+    transform: translate(25px, 5px);
 }
 
 .menubar-section .menubar-parents .menubar-list {
-    width: 50%;
+    width: 70%;
 }
 
 .menubar-section .menubar-parents {
@@ -110,17 +110,18 @@ a {
 }
 
 .menubar-section .menubar-parents .menubar-list ul {
-    justify-content: center;
+    justify-content: end;
 }
 
 .menubar-section .menubar-parents .menubar-list ul li {
     position: relative;
     display: inline-block;
     transition: 1s;
+    transform: translateX(29%);
 }
 
 .menubar-section .menubar-parents .menubar-list ul li a {
-    padding: 0 25px;
+    padding: 0 38px;
 }
 
 .menubar-section .menubar-parents .menubar-list ul li::after {
@@ -155,7 +156,7 @@ a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 255px 0;
+    padding: 95px 0px 105px 0px;
     position: relative;
     z-index: 99;
 }
@@ -173,7 +174,6 @@ a {
 
 .banner-sec .banner-parents .banner-text {
     text-align: center;
-    transform: translateX(10%);
 }
 
 .banner-sec .banner-parents .banner-text .bannertitle h2 {
@@ -194,22 +194,28 @@ a {
 
 /* ............ end banner ...............  */
 
-.form-sec .form-parents .form-input .form-contant input {
-    width: 370px;
+.form-sec .form-parents .form-input .form-contant .first-input input {
+    width: 44%;
     height: 36px;
     font-size: 18px;
     padding-left: 10px;
 }
 
+.form-sec .form-parents .form-input .form-contant .first-input {
+    column-gap: 3%;
+}
+
 .form-sec .form-parents .form-input .form-contant .subject {
-    width: 759px;
-    margin: 25px 0px;
+    width: 93.5%;
+    padding-left: 10px;
+    height: 36px;
+    font-size: 18px;
 }
 
 #massege {
-    padding-left: 10px;
-    padding-top: 10px;
+    padding: 10px 0px 150px 10px;
     font-size: 18px;
+    width: 93.5%;
 }
 
 .form-sec .form-parents .form-input .form-contant a {
@@ -222,6 +228,10 @@ a {
     margin: 20px 0px 74px 0px;
     display: inline-block;
     font-family: 'Roboto', sans-serif;
+}
+
+.form-sec .form-parents .form-input .form-contant {
+    width: 100%;
 }
 
 .form-sec .form-parents .form-input .form-contant a:hover {
