--- a/css/gallary.css
+++ b/css/gallary.css
@@ -5,7 +5,7 @@
 
 /* ========================global style================ */
 .container {
-    max-width: 1250px;
+    max-width: 1200px;
     width: 100%;
     box-sizing: border-box;
     padding: 0 20px;
@@ -94,13 +94,13 @@ a {
 }
 
 .menubar-section .menubar-parents .menubar-logo {
-    width: 50%;
+    width: 30%;
     text-align: left;
-    transform: translateX(25px);
+    transform: translate(25px, 5px);
 }
 
 .menubar-section .menubar-parents .menubar-list {
-    width: 50%;
+    width: 70%;
 }
 
 .menubar-section .menubar-parents {
@@ -108,17 +108,19 @@ a {
 }
 
 .menubar-section .menubar-parents .menubar-list ul {
-    justify-content: center;
+    justify-content: end;
 }
 
 .menubar-section .menubar-parents .menubar-list ul li {
     position: relative;
+    transform: translateX(29%);
     display: inline-block;
     transition: 1s;
+
 }
 
 .menubar-section .menubar-parents .menubar-list ul li a {
-    padding: 0 25px;
+    padding: 0 38px;
 }
 
 .menubar-section .menubar-parents .menubar-list ul li::after {
@@ -152,7 +154,7 @@ a {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 285px 0;
+    padding: 95px 0px 105px 0px;
     position: relative;
     z-index: 99;
 }
@@ -170,7 +172,6 @@ a {
 
 .banner-sec .banner-parents .banner-text {
     text-align: center;
-    transform: translateX(10%);
 }
 
 .banner-sec .banner-parents .banner-text .bannertitle h2 {
