--- a/css/home.css
+++ b/css/home.css
@@ -5,7 +5,7 @@
 
 /* ========================global style================ */
 .container {
-    max-width: 1250px;
+    max-width: 1200px;
     width: 100%;
     box-sizing: border-box;
     padding: 0 20px;
@@ -97,13 +97,13 @@ a {
 }
 
 .menubar-section .menubar-parents .menubar-logo {
-    width: 50%;
+    width: 30%;
     text-align: left;
-    transform: translateX(25px);
+    transform: translate(25px, 5px);
 }
 
 .menubar-section .menubar-parents .menubar-list {
-    width: 50%;
+    width: 70%;
 }
 
 .menubar-section .menubar-parents {
@@ -111,17 +111,18 @@ a {
 }
 
 .menubar-section .menubar-parents .menubar-list ul {
-    justify-content: center;
+    justify-content: end;
 }
 
 .menubar-section .menubar-parents .menubar-list ul li {
     position: relative;
     display: inline-block;
     transition: 1s;
+    transform: translateX(29%);
 }
 
 .menubar-section .menubar-parents .menubar-list ul li a {
-    padding: 0 25px;
+    padding: 0px 38px;
 }
 
 .menubar-section .menubar-parents .menubar-list ul li::after {
@@ -180,7 +181,7 @@ a {
 }
 
 .banner-sec .banner-parents .banner-tex {
-    transform: translateX(80%);
+    transform: translateX(65%);
     max-width: 34%;
     width: 100%;
     margin: 0 auto;
