--- a/css/contact.css
+++ b/css/contact.css
@@ -207,8 +207,7 @@ a {
 
 .form-sec .form-parents .form-input .form-contant .subject {
     width: 93.5%;
-    padding-left: 10px;
-    height: 36px;
+    padding: 10px 0px 10px 10px;
     font-size: 18px;
 }
 
