--- a/css/about.css
+++ b/css/about.css
@@ -88,64 +88,95 @@ a {
     color: red;
 }
 
-/* =========================== topbar section=========== */
-.menubar-section {
-    padding: 15px 0;
+@media (max-width:768px) {
+    .topbar-sec .topbar-parents .topbar-contact ul {
+        flex-direction: column;
+    }
 }
 
-.menubar-section .menubar-parents .menubar-logo {
+@media (max-width:640px) {
+    .topbar-sec .topbar-parents .topbar-contact ul li {
+        display: flex;
+    }
+}
+
+
+/* =========================== topbar section=========== */
+
+.topnav {
+    width: 70%;
+    justify-content: end;
+    transform: translateX(37px);
+    position: relative;
+    transition: 1s;
+}
+
+.topnav a {
+    display: inline-block;
+    color: #173a69;
+    text-align: center;
+    margin: 0px 38px;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    /* transition: 1s; */
+}
+
+.logo {
     width: 30%;
     text-align: left;
-    transform: translate(25px, 5px);
+    transform: translate(18px, 5px);
 }
 
-.menubar-section .menubar-parents .menubar-list {
-    width: 70%;
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
 }
 
-.menubar-section .menubar-parents {
-    justify-content: space-between;
+.topnav .icon {
+    display: none;
 }
 
-.menubar-section .menubar-parents .menubar-list ul {
-    justify-content: end;
-}
+@media screen and (max-width: 1100px) {
+    .topnav a {
+        display: none;
+        padding: 10px;
+        float: none;
+    }
 
-.menubar-section .menubar-parents .menubar-list ul li {
-    position: relative;
-    display: inline-block;
-    transition: 1s;
-    transform: translateX(29%);
-}
+    .topnav a:hover {
+        background-color: black;
+        color: white;
+    }
 
-.menubar-section .menubar-parents .menubar-list ul li a {
-    padding: 0 38px;
-}
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
 
-.menubar-section .menubar-parents .menubar-list ul li::after {
-    content: "";
-    width: 0;
-    height: 3px;
-    position: absolute;
-    background: #0c1f38;
-    left: 55%;
-    transform: translateX(-50%);
-    transition: 1s;
-    bottom: -46px;
 
 }
 
-.menubar-section .menubar-parents .menubar-list ul li:hover::after {
-    width: 100%;
+@media screen and (max-width: 1100px) {
+    .topnav.responsive {
+        position: relative;
+    }
 
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
 
-.menubar-section .menubar-parents .menubar-list ul li a {
-    font-size: 15px;
-    line-height: 21px;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-}
 
 /* ============= End of navbar section ============== */
 
@@ -283,6 +314,45 @@ a {
     max-width: 90%;
 }
 
+@media (min-width:360px) and (max-width:1400px) {
+    .welecome-sec .welecome-parents {
+        flex-direction: column;
+    }
+
+    .welecome-sec .welecome-parents .welecome-img::after {
+        display: none;
+    }
+
+    .welecome-sec .welecome-parents .welecome-text .welecomedes {
+        padding: 30px 0px 30px 0px;
+    }
+
+    .welecome-sec .welecome-parents .welecome-text .welecome-title h2::before {
+        display: none;
+    }
+
+    .welecome-sec .welecome-parents .welecome-text .welecome-title ::after {
+        display: none;
+    }
+
+    .welecome-sec .welecome-parents .welecome-img {
+        padding: 40px 0;
+    }
+
+    .welecome-sec .welecome-parents .welecome-img::after {
+        top: 3%;
+    }
+
+    .welecome-sec .welecome-parents .welecome-text {
+        width: 65%;
+        text-align: center;
+    }
+
+    .welecome-sec .welecome-parents .welecome-text .welecome-title h2 {
+        font-size: 22px;
+    }
+}
+
 /* ===================== End of about sec ================ */
 
 .card-sec {
@@ -385,6 +455,71 @@ a {
     padding: 0px 25px 30px 25px;
 }
 
+@media (min-width:360px) and (max-width:1167px) {
+    .card-sec {
+        padding: 40px 0;
+    }
+
+    .card-sec .card-parents {
+        flex-direction: column;
+    }
+
+    .card-sec .card-parents .card-one {
+        padding-top: 20px;
+        width: 40%;
+        margin: 10px;
+    }
+
+    .card-sec .card-parents .card-one .card-title h2 {
+        font-size: 21px;
+        padding: 10px 0px 40px 0px;
+    }
+
+    .card-sec .card-parents .card-one .card-des p {
+        font-size: 14px;
+        padding: 0px 16px 30px 14px;
+    }
+
+    .card-sec .card-parents .card-one .card-title::before {
+        top: 71%;
+        right: 29%;
+    }
+
+    .card-sec .card-parents .card-one .card-title h2::before {
+        top: 71%;
+        left: 33%;
+    }
+}
+
+@media (min-width:360px) and (max-width:576px) {
+    .card-sec .card-parents .card-one {
+        padding-top: 20px;
+        width: 70%;
+        margin: 10px;
+    }
+
+    .card-sec .card-parents .card-one .card-title h2 {
+        font-size: 16px;
+        padding: 7px 0px 10px 0px;
+    }
+
+    .card-sec .card-parents .card-one .card-title h2::after {
+        display: none;
+    }
+
+    .card-sec .card-parents .card-one .card-title::before {
+        display: none;
+    }
+
+    .card-sec .card-parents .card-one .card-title h2::before {
+        display: none;
+    }
+
+    .card-sec .card-parents .card-one .card-des p {
+        font-size: 12px;
+        padding: 0px 21px 30px 21px;
+    }
+}
 
 /* ...............company-sec........  */
 .company-sec .company-parents .company-title h3 {
@@ -438,6 +573,28 @@ a {
     max-width: 90%;
 }
 
+@media (min-width:360px) and (max-width:1167px) {
+    .icon-sec .icon-parents {
+        flex-direction: column;
+    }
+
+    .icon-sec .icon-parents .icon-one {
+        text-align: center;
+        padding-top: 15px;
+    }
+
+    .icon-sec .icon-parents .icon-one .icon-title h3 {
+        font-size: 20px;
+        padding: 10px 0px;
+    }
+
+    .icon-sec .icon-parents .icon-one .icon-des p {
+        font-size: 14px;
+        padding-bottom: 20px;
+        max-width: 100%;
+    }
+}
+
 /* ............ End icon sec ............... */
 
 /* ------------------- contact part ---------- */
@@ -460,6 +617,24 @@ a {
     font-size: 30px;
     line-height: 36px;
     font-weight: 900;
+}
+
+.contact-sec .contact-parents a:hover {
+    text-shadow: 1px 1px white;
+}
+
+@media (min-width:360px) and (max-width:768px) {
+    .contact-sec .contact-parents p {
+        font-size: 20px;
+    }
+
+    .contact-sec .contact-parents a {
+        font-size: 25px;
+    }
+
+    .contact-sec .contact-parents {
+        padding: 35px 0px 35px 0px;
+    }
 }
 
 /* ================== logo-icon part ============= */
@@ -509,4 +684,14 @@ a {
     font-weight: 700;
     line-height: 24px;
     border-bottom: 1px solid white;
+}
+
+@media (min-width:360px) and (max-width:768px) {
+    .footer-sec .footer-parents p {
+        font-size: 12px;
+    }
+
+    .footer-sec .footer-parents a {
+        font-size: 15px;
+    }
 }
