--- a/css/contact.css
+++ b/css/contact.css
@@ -90,63 +90,91 @@ a {
     color: red;
 }
 
-/* =========================== topbar section=========== */
-.menubar-section {
-    padding: 15px 0;
+@media (max-width:768px) {
+    .topbar-sec .topbar-parents .topbar-contact ul {
+        flex-direction: column;
+    }
 }
 
-.menubar-section .menubar-parents .menubar-logo {
+@media (max-width:640px) {
+    .topbar-sec .topbar-parents .topbar-contact ul li {
+        display: flex;
+    }
+}
+
+/* =========================== topbar section=========== */
+.topnav {
+    width: 70%;
+    justify-content: end;
+    transform: translateX(37px);
+    position: relative;
+    transition: 1s;
+}
+
+.topnav a {
+    display: inline-block;
+    color: #173a69;
+    text-align: center;
+    margin: 0px 38px;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    /* transition: 1s; */
+}
+
+.logo {
     width: 30%;
     text-align: left;
-    transform: translate(25px, 5px);
+    transform: translate(18px, 5px);
 }
 
-.menubar-section .menubar-parents .menubar-list {
-    width: 70%;
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
 }
 
-.menubar-section .menubar-parents {
-    justify-content: space-between;
+.topnav .icon {
+    display: none;
 }
 
-.menubar-section .menubar-parents .menubar-list ul {
-    justify-content: end;
-}
+@media screen and (max-width: 1100px) {
+    .topnav a {
+        display: none;
+        padding: 10px;
+        float: none;
+    }
 
-.menubar-section .menubar-parents .menubar-list ul li {
-    position: relative;
-    display: inline-block;
-    transition: 1s;
-    transform: translateX(29%);
-}
+    .topnav a:hover {
+        background-color: black;
+        color: white;
+    }
 
-.menubar-section .menubar-parents .menubar-list ul li a {
-    padding: 0 38px;
-}
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
 
-.menubar-section .menubar-parents .menubar-list ul li::after {
-    content: "";
-    width: 0;
-    height: 3px;
-    position: absolute;
-    background: #0c1f38;
-    left: 55%;
-    transform: translateX(-50%);
-    transition: 1s;
-    bottom: -46px;
 
 }
 
-.menubar-section .menubar-parents .menubar-list ul li:hover::after {
-    width: 100%;
+@media screen and (max-width: 1100px) {
+    .topnav.responsive {
+        position: relative;
+    }
 
-}
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
 
-.menubar-section .menubar-parents .menubar-list ul li a {
-    font-size: 15px;
-    line-height: 21px;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
 
 /* ============= End of navbar section ============== */
@@ -174,6 +202,7 @@ a {
 
 .banner-sec .banner-parents .banner-text {
     text-align: center;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .banner-sec .banner-parents .banner-text .bannertitle h2 {
@@ -195,7 +224,7 @@ a {
 /* ............ end banner ...............  */
 
 .form-sec .form-parents .form-input .form-contant .first-input input {
-    width: 44%;
+    min-width: 44%;
     height: 36px;
     font-size: 18px;
     padding-left: 10px;
@@ -206,7 +235,7 @@ a {
 }
 
 .form-sec .form-parents .form-input .form-contant .subject {
-    width: 93.5%;
+    min-width: 93%;
     padding: 10px 0px 10px 10px;
     font-size: 18px;
 }
@@ -214,11 +243,10 @@ a {
 #massege {
     padding: 10px 0px 150px 10px;
     font-size: 18px;
-    width: 93.5%;
+    min-width: 93%;
 }
 
 .form-sec .form-parents .form-input .form-contant a {
-    /* background: #173a69; */
     color: #173a69;
     border: 1px solid #173a69;
     padding: 16px 36px;
@@ -292,6 +320,61 @@ a {
     display: flex;
 }
 
+@media (max-width:1100px) {
+    .form-sec .form-parents .form-input .form-title h3 {
+        font-size: 23px;
+        margin-top: 30px;
+    }
+
+    .form-sec .form-parents .form-input .form-des p {
+        font-size: 14px;
+        padding: 6px 0px 15px 0px;
+    }
+
+    .form-sec .form-parents .form-input .form-contant .first-input {
+        flex-direction: column;
+        width: 100%;
+        row-gap: 18px;
+    }
+
+    .form-sec .form-parents .form-input .form-contant .first-input input {
+        min-width: 93%;
+    }
+
+    .form-sec .form-parents {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .form-sec .form-parents .form-location {
+        width: 100%;
+        text-align: center;
+    }
+
+    .form-sec .form-parents .form-input {
+        text-align: center;
+        width: 100%;
+    }
+
+    .form-sec .form-parents .form-location {
+        margin-top: 0px;
+    }
+
+    .form-sec .form-parents .form-input .form-contant a {
+        margin: 20px 0px 20px 0px;
+    }
+
+    .form-sec .form-parents .form-location .location-title h3 {
+        font-size: 30px;
+        padding-bottom: 16px;
+    }
+
+    .form-sec .form-parents .form-location .location-icon ul li {
+        font-size: 12px;
+        margin-bottom: 10px;
+    }
+}
+
 /* ------------------- contact part ---------- */
 .contact-sec {
     background-color: hsl(214, 64%, 25%);
@@ -314,6 +397,24 @@ a {
     line-height: 36px;
     font-weight: 900;
     font-family: 'Open Sans', sans-serif;
+}
+
+.contact-sec .contact-parents a:hover {
+    text-shadow: 1px 1px white;
+}
+
+@media (min-width:360px) and (max-width:768px) {
+    .contact-sec .contact-parents p {
+        font-size: 20px;
+    }
+
+    .contact-sec .contact-parents a {
+        font-size: 25px;
+    }
+
+    .contact-sec .contact-parents {
+        padding: 35px 0px 35px 0px;
+    }
 }
 
 /* ================== logo-icon part ============= */
@@ -364,4 +465,14 @@ a {
     font-family: 'Open Sans', sans-serif;
     line-height: 24px;
     border-bottom: 1px solid white;
+}
+
+@media (min-width:360px) and (max-width:768px) {
+    .footer-sec .footer-parents p {
+        font-size: 12px;
+    }
+
+    .footer-sec .footer-parents a {
+        font-size: 15px;
+    }
 }
