--- a/css/gallary.css
+++ b/css/gallary.css
@@ -88,64 +88,92 @@ a {
     color: red;
 }
 
-/* =========================== topbar section=========== */
-.menubar-section {
-    padding: 15px 0;
+@media (max-width:768px) {
+    .topbar-sec .topbar-parents .topbar-contact ul {
+        flex-direction: column;
+    }
 }
 
-.menubar-section .menubar-parents .menubar-logo {
+@media (max-width:640px) {
+    .topbar-sec .topbar-parents .topbar-contact ul li {
+        display: flex;
+    }
+}
+
+/* =========================== topbar section=========== */
+
+.topnav {
+    width: 70%;
+    justify-content: end;
+    transform: translateX(37px);
+    position: relative;
+    transition: 1s;
+}
+
+.topnav a {
+    display: inline-block;
+    color: #173a69;
+    text-align: center;
+    margin: 0px 38px;
+    text-decoration: none;
+    font-size: 15px;
+    font-weight: 700;
+    font-family: 'Open Sans', sans-serif;
+    text-transform: uppercase;
+    /* transition: 1s; */
+}
+
+.logo {
     width: 30%;
     text-align: left;
-    transform: translate(25px, 5px);
+    transform: translate(18px, 5px);
 }
 
-.menubar-section .menubar-parents .menubar-list {
-    width: 70%;
+.topnav a.active {
+    background-color: #04AA6D;
+    color: white;
 }
 
-.menubar-section .menubar-parents {
-    justify-content: space-between;
+.topnav .icon {
+    display: none;
 }
 
-.menubar-section .menubar-parents .menubar-list ul {
-    justify-content: end;
-}
+@media screen and (max-width: 1100px) {
+    .topnav a {
+        display: none;
+        padding: 10px;
+        float: none;
+    }
 
-.menubar-section .menubar-parents .menubar-list ul li {
-    position: relative;
-    transform: translateX(29%);
-    display: inline-block;
-    transition: 1s;
+    .topnav a:hover {
+        background-color: black;
+        color: white;
+    }
 
-}
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
 
-.menubar-section .menubar-parents .menubar-list ul li a {
-    padding: 0 38px;
-}
-
-.menubar-section .menubar-parents .menubar-list ul li::after {
-    content: "";
-    width: 0;
-    height: 3px;
-    position: absolute;
-    background: #0c1f38;
-    left: 55%;
-    transform: translateX(-50%);
-    transition: 1s;
-    bottom: -46px;
 
 }
 
-.menubar-section .menubar-parents .menubar-list ul li:hover::after {
-    width: 100%;
+@media screen and (max-width: 1100px) {
+    .topnav.responsive {
+        position: relative;
+    }
 
-}
+    .topnav.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
 
-.menubar-section .menubar-parents .menubar-list ul li a {
-    font-size: 15px;
-    line-height: 21px;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
 
 /* ============= End of navbar section ============== */
@@ -246,6 +274,22 @@ a {
     transform: scale(1);
 }
 
+@media (max-width:1200px) {
+    .gallary-sec {
+        padding: 0px 0px 25px 0px;
+    }
+
+    .gallary-sec .gallary-parents .gallary-img1 {
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+    }
+
+    .gallary-sec .gallary-parents .gallary-img1 .hover img {
+        width: 100%;
+    }
+}
+
 /* ------------------- contact part ---------- */
 .contact-sec {
     background-color: #173a69;
@@ -266,6 +310,24 @@ a {
     font-size: 30px;
     line-height: 36px;
     font-weight: 900;
+}
+
+.contact-sec .contact-parents a:hover {
+    text-shadow: 1px 1px white;
+}
+
+@media (min-width:360px) and (max-width:768px) {
+    .contact-sec .contact-parents p {
+        font-size: 20px;
+    }
+
+    .contact-sec .contact-parents a {
+        font-size: 25px;
+    }
+
+    .contact-sec .contact-parents {
+        padding: 35px 0px 35px 0px;
+    }
 }
 
 /* ================== logo-icon part ============= */
@@ -315,4 +377,14 @@ a {
     font-weight: 700;
     line-height: 24px;
     border-bottom: 1px solid white;
+}
+
+@media (min-width:360px) and (max-width:768px) {
+    .footer-sec .footer-parents p {
+        font-size: 12px;
+    }
+
+    .footer-sec .footer-parents a {
+        font-size: 15px;
+    }
 }
